<!--
  ~ Copyright (c) 2016 Pablo L. Sordo Martinez
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<resources>
    <!-- 'string' values relating to general aspects of the app -->
    <string name="app_name">La Tahona</string>
    <string name="option_refresh">Refresh</string>
    <string name="option_settings">Settings</string>

    <!-- 'string' values relating to the 'Card' object -->
    <string name="card_action_title">Action</string>
    <string name="card_image_content_description">A thumbnail</string>
    <string name="card_image_button_content_description">An image button</string>

    <!-- 'string' values relating to the feed -->
    <string name="feed_data_name">feed data</string>
    <string name="feed_category_favoritos">Favoritos</string>
    <string name="feed_category_actualidad">Actualidad</string>
    <string name="feed_category_formacion">Formación</string>
    <string name="feed_category_recetas">Recetas</string>
    <string name="feed_category_nacional">Nacional</string>
    <string name="feed_category_internacional">Internacional</string>
    <string name="feed_category_asociaciones">Asociaciones</string>
    <string name="feed_category_ferias">Ferias</string>
</resources>
