<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/favGroup"
        android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_option_favoritos"
            android:icon="@drawable/ic_favorite_24dp"
            android:tint="@android:color/darker_gray"
            android:title="@string/feed_category_favoritos" />
    </group>

    <group
        android:id="@+id/restGroup"
        android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_option_actualidad"
            android:icon="@drawable/ic_actualidad_24dp"
            android:tint="@android:color/darker_gray"
            android:title="@string/feed_category_actualidad" />
        <item
            android:id="@+id/navigation_option_formacion"
            android:icon="@drawable/ic_formacion_24dp"
            android:tint="@android:color/darker_gray"
            android:title="@string/feed_category_formacion" />
        <item
            android:id="@+id/navigation_option_recetas"
            android:icon="@drawable/ic_recetas_24dp"
            android:tint="@android:color/darker_gray"
            android:title="@string/feed_category_recetas" />
        <item
            android:id="@+id/navigation_option_nacional"
            android:icon="@drawable/ic_nacional_24dp"
            android:tint="@android:color/darker_gray"
            android:title="@string/feed_category_nacional" />
        <item
            android:id="@+id/navigation_option_internacional"
            android:icon="@drawable/ic_internacional_24dp"
            android:tint="@android:color/darker_gray"
            android:title="@string/feed_category_internacional" />
        <item
            android:id="@+id/navigation_option_asociaciones"
            android:icon="@drawable/ic_asociaciones_24dp"
            android:tint="@android:color/darker_gray"
            android:title="@string/feed_category_asociaciones" />
        <item
            android:id="@+id/navigation_option_ferias"
            android:icon="@drawable/ic_ferias_24dp"
            android:tint="@android:color/darker_gray"
            android:title="@string/feed_category_ferias" />
    </group>

</menu>