<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016 Pablo L. Sordo Martinez
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/favGroup"
        android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_option_favoritos"
            android:icon="@drawable/ic_favorite_24dp"
            android:tint="@android:color/darker_gray"
            android:title="@string/feed_category_favoritos" />
    </group>

    <group
        android:id="@+id/restGroup"
        android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_option_actualidad"
            android:icon="@drawable/ic_actualidad_24dp"
            android:tint="@android:color/darker_gray"
            android:title="@string/feed_category_actualidad" />
        <item
            android:id="@+id/navigation_option_formacion"
            android:icon="@drawable/ic_formacion_24dp"
            android:tint="@android:color/darker_gray"
            android:title="@string/feed_category_formacion" />
        <item
            android:id="@+id/navigation_option_recetas"
            android:icon="@drawable/ic_recetas_24dp"
            android:tint="@android:color/darker_gray"
            android:title="@string/feed_category_recetas" />
        <item
            android:id="@+id/navigation_option_nacional"
            android:icon="@drawable/ic_nacional_24dp"
            android:tint="@android:color/darker_gray"
            android:title="@string/feed_category_nacional" />
        <item
            android:id="@+id/navigation_option_internacional"
            android:icon="@drawable/ic_internacional_24dp"
            android:tint="@android:color/darker_gray"
            android:title="@string/feed_category_internacional" />
        <item
            android:id="@+id/navigation_option_asociaciones"
            android:icon="@drawable/ic_asociaciones_24dp"
            android:tint="@android:color/darker_gray"
            android:title="@string/feed_category_asociaciones" />
        <item
            android:id="@+id/navigation_option_ferias"
            android:icon="@drawable/ic_ferias_24dp"
            android:tint="@android:color/darker_gray"
            android:title="@string/feed_category_ferias" />
    </group>

</menu>